client/www/css/mobile/main.less
@import "../basic/variable";
@import "./profile.less";
@import "mobile-variable";

.b-signin-wrapper {
    margin-top: 0;
    padding-top: 2em;
    margin-bottom: 0;
}

.b-signin-container {
    padding: 0 0 70px;
}

.full-height {
    position: relative;
    height: 100%;

    .mobile.bottom {
        bottom: 0 !important;
    }

    .mobile.attached {
        position: absolute !important;
    }
}

.full-wide {
    width: 100% !important;
}

.mobile.bottom {
    bottom: 0;
}

.mobile.attached {
    position: fixed !important;
}

.bottom.button {
    bottom: 0;
}

.attached.button {
    position: absolute !important;
}

.ui.brand.error.message {
    margin-left: 0;
    margin-right: 0;
}

.invisible {
    visibility: hidden;
}

.b-signin-wide form {
    padding-top: 0;
}

.has-bottom, .has-footer {
    padding-bottom: 70px;
}

.b-bind-mobile-container {
    padding-bottom: 2em;
}

.b-wechat-frame {
    background-color: transparent !important;
    height: 410px !important;
    min-height: 410px !important;
    max-width: 100%;
    min-width: 100%;
    border: none;
}

.b-mobile.back-color {
    background-color: @color-mobile;
}

.transparent {
    background-color: transparent !important;
    border: none !important;
    box-shadow: none !important;

    > * {
        border: none !important;
        box-shadow: none !important;
    }
}

.white.color {
    color: white;
}

.shadowed {
    text-shadow: 2px 2px 5px #000000;
}

.white.header {
    color: white !important;
}

.ui.fixed.inverted.menu.b-mobile {
    background-color: @color-mobile;

    .left.aligned.item {
        text-align: left;
        -webkit-box-pack: initial;
        -ms-flex-pack: initial;
        justify-content: initial;
    }

    .item::before {
        display: none !important;
    }
}

a {
    color: black;
}

a:hover, a:active, a:focus,
a.icon:hover, a.icon:active, a.icon:focus {
    color: @color-brand !important;

    & .icon {
        color: @color-brand !important;
    }
}

.header.item a,
.header.item a:link,
.header.item a:visited {
    color: white !important;
}

.has-header {
    padding-top: 48px !important;
}

.main.body {
    height: 100%;
}

.bottom.stuck {
    position: absolute;
    bottom: 0;
}

.b-profile.menu {
    background-color: transparent !important;
    border-radius: 0;
}

.b-profile.menu > .item {
    color: white !important;
    border-radius: 0;

    &.active, &:hover, &:active, &:focus {
        background-color: @color-brand !important;
        color: white !important;
    }

}

.grey.color {
    color: @color-grey-dark;
}

.ui.brand.message-wrapper.container {
    z-index: 4;
    position: fixed;
    top: 100px;
    width: 100%;

    .ui.brand.message {
        position: relative;
        margin: 0 auto;
        display: inline-block;
        background: rgba(0, 0, 0, 0.5);
        font-size: larger;
        padding: 10px 50px 10px 20px;
        box-shadow: 0 0 0 0;
        border: none;

        .remove.icon, .circle.icon {
            cursor: pointer;
            margin-right: -40px;
            margin-left: 10em;
            letter-spacing: 2em;
        }
    }
}

.ui.brand.message {
    background-color: @color-grey-dark;
    border-color: @color-grey-dark;
    box-shadow: 0 0 0 1px @color-grey-dark inset, 0 0 0 0 transparent;
    color: white;

    .header {
        color: @color-grey-lighter;
        font-weight: normal;
    }
}

.ui.brand.error.message {
    background-color: @color-brand-darker;
    border-color: @color-brand-darker;
    box-shadow: 0 0 0 1px @color-brand-darker inset, 0 0 0 0 transparent;
    color: white;
    padding: 5px 10px;
    font-size: smaller;
    position: relative;

    .list {
        list-style-type: none;
        margin-right: 20px;

        li {
            margin: 0;
        }

        li::before {
            content: '';
        }

        li:nth-child(n+3) {
            display: none;
        }
    }

    .remove.icon, .circle.icon {
        position: absolute;
        right: 5px;
        top: 0;
        left: 0;
        bottom: 0;
        display: block;
        margin: auto 0 auto auto;
        cursor: pointer;
    }
}

.ui.form .fields.error .field textarea, .ui.form .fields.error .field select, .ui.form .fields.error .field input:not([type]), .ui.form .fields.error .field input[type="date"], .ui.form .fields.error .field input[type="datetime-local"], .ui.form .fields.error .field input[type="email"], .ui.form .fields.error .field input[type="number"], .ui.form .fields.error .field input[type="password"], .ui.form .fields.error .field input[type="search"], .ui.form .fields.error .field input[type="tel"], .ui.form .fields.error .field input[type="time"], .ui.form .fields.error .field input[type="text"], .ui.form .fields.error .field input[type="url"], .ui.form .field.error textarea, .ui.form .field.error select, .ui.form .field.error input:not([type]), .ui.form .field.error input[type="date"], .ui.form .field.error input[type="datetime-local"], .ui.form .field.error input[type="email"], .ui.form .field.error input[type="number"], .ui.form .field.error input[type="password"], .ui.form .field.error input[type="search"], .ui.form .field.error input[type="tel"], .ui.form .field.error input[type="time"], .ui.form .field.error input[type="text"], .ui.form .field.error input[type="url"] {
    border-color: @color-brand;
}

.ui.form .fields {
    -webkit-flex-wrap: inherit;
    -ms-flex-wrap: inherit;
    flex-wrap: inherit;
}

